# httk-web

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: conf.py  deployment_apache.md  deployment_nginx.md  how_it_works.md  how_it_works.rst  index.md  index.rst  migration_legacy_to_jinja2.md  migration_legacy_to_jinja2.rst  reference.md  reference.rst  site_template_repository.md
examples/: README.md
examples/legacy/: README.md
examples/legacy/blog/src/content/: index.md
examples/legacy/blog/src/functions/: init.py
examples/legacy/blog/src/templates/: base_default.httkweb.html
examples/legacy/hello_world_app/: publish_legacy_hello_world.py  serve_legacy_hello_world.py
examples/legacy/hello_world_app/src/functions/: hello_world.py  init.py
examples/legacy/static_simple/: publish_legacy_static_simple.py  serve_legacy_static_simple.py
examples/modern/blog/: README.md
examples/modern/minimal/: README.md
examples/modern/minimal/public/: index.html
examples/modern/rst_site/: README.md  publish.py
examples/modern/search_app/: README.md  serve.py
src/httk/web/: __init__.py  api.py
src/httk/web/compat/: __init__.py
src/httk/web/engine/: __init__.py  discovery.py  site_engine.py
src/httk/web/functions/: __init__.py  python_module.py
src/httk/web/model/: __init__.py  config.py  errors.py  page.py  request.py
src/httk/web/publishing/: __init__.py  static.py
src/httk/web/renderers/: __init__.py  _frontmatter.py  base.py  html.py  httkweb_compat.py  markdown.py  rst.py
src/httk/web/runtime/: __init__.py  asgi.py  devserver.py
src/httk/web/templating/: __init__.py  _legacy_formatter.py  base.py  httk_compat.py  jinja2_engine.py
tests/: test_api.py  test_discovery.py  test_functions.py  test_publish_warnings.py  test_python_module_handler.py  test_renderers.py  test_templating.py
(+31 files in other folders)
