[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "httk-web"
version = "0.1.0"
description = "Web and static-site tooling for httk v2"
readme = "README.md"
license = "AGPL-3.0+"
requires-python = ">=3.11"
authors = [{ name = "Rickard Armiento", email = "gitcommits@armiento.net" }]
dependencies = [
  "httk-core @ git+https://github.com/httk/httk-core",
  "jinja2>=3.1",
  "markdown>=3.5",
  "PyYAML>=6.0",
  "docutils>=0.20",
  "starlette>=0.37",
  "uvicorn>=0.30"
]
keywords = [
  "Materials Discovery",
  "Materials Informatics",
  "Materials Science",
  "Machine Learning",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "black",
  "ruff",
  "isort",
  "pyright",
  "mypy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py311"
src = ["src", "examples"]

[tool.black]
target-version = ["py311"]
line-length = 120
skip-string-normalization = true

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "examples"]
reportMissingImports = true
extraPaths = []

[tool.mypy]
python_version = "3.11"
files = ["src", "examples"]
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["yaml", "markdown", "docutils", "docutils.*"]
ignore_missing_imports = true
